# OTUS

./: .gitignore  CMakeLists.txt
.github/workflows/: github-actions.yml
Week1/: CMakeLists.txt  main.cpp
Week1/test/: test_version.cpp
Week2/: CMakeLists.txt
Week2/src/: ip_filter.cpp  lib.cpp  lib.h
